# bemacon_titulos_a_receber

./: .gitignore  README.md  app.py  necessidades.txt  notas.md  parser_pdf_manual.py  pyproject.toml  tree.txt
parser/: parser.py
src/services/: data_filter.py  pdf_parser.py  pdf_processor.py
src/ui/: main_view.py  sidebar.py
src/utils/: formatters.py  funcionarios.py
