[project]
name = "pdf-relatorio"
version = "0.1.0"
description = "otimizacao de processo convertendo relatorio gerado em pdf para formato a ser explorado com pandas"
authors = [
    {name = "Cláudio dos Santos",email = "cadossantos@proton.me"}
]
license = {text = "GNU 2.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit (>=1.45.1,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "pdfplumber (>=0.11.7,<0.12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
